MAT-9468: fix modal removing the scrollbar and shifting the page
Former-commit-id: f44221093a8b4b44be5dd908a69d46b8ff04fdb8

--- a/war/Mat.css
+++ b/war/Mat.css
@@ -2905,3 +2905,8 @@ padding: 2px;
 .expressionBuilderExpressionPanel {
 	font-size: small;
 }
+
+.modal-open {
+  overflow: auto!important;
+  padding-right:0!important
+}
